--- a/css/12-col-css_framework.css
+++ b/css/12-col-css_framework.css
@@ -5,7 +5,13 @@
 }
 
 .container{
-    width: 1170px;
+    width: 460px;
+    max-width: 100%;
+    margin: 0 auto;
+}
+
+.container-fluid{
+    width: 100%;
     max-width: 100%;
     margin: 0 auto;
 }
@@ -49,6 +55,10 @@
 
 @media screen and (min-width: 576px) {
 
+    .container{
+        width: 540px;
+    }
+
     .col-sm-1{flex-basis: calc((100% / 12) * 1); max-width: calc((100% / 12) * 1);}
     .col-sm-2{flex-basis: calc((100% / 12) * 2); max-width: calc((100% / 12) * 2);}
     .col-sm-3{flex-basis: calc((100% / 12) * 3); max-width: calc((100% / 12) * 3);}
@@ -78,6 +88,10 @@
 
 @media screen and (min-width: 768px) {
 
+    .container{
+        width: 720px;
+    }
+
     .col-md-1{flex-basis: calc((100% / 12) * 1); max-width: calc((100% / 12) * 1);}
     .col-md-2{flex-basis: calc((100% / 12) * 2); max-width: calc((100% / 12) * 2);}
     .col-md-3{flex-basis: calc((100% / 12) * 3); max-width: calc((100% / 12) * 3);}
@@ -106,6 +120,10 @@
 }
 
 @media screen and (min-width: 992px) {
+    
+    .container{
+        width: 960px;
+    }
 
     .col-lg-1{flex-basis: calc((100% / 12) * 1); max-width: calc((100% / 12) * 1);}
     .col-lg-2{flex-basis: calc((100% / 12) * 2); max-width: calc((100% / 12) * 2);}
