--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
     background-color: rgb(255, 109, 133);
     height: 100%;
     border: 1px solid pink;
+    line-height: normal;
+    position: relative;
 }
 
 
@@ -19,4 +21,11 @@
 
 .container, .row{
     height: 100%;
+}
+
+.pinky span{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
